--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,5 +6,8 @@ import Layout from "../layouts/Layout.astro";
 ---
 
 <Layout>
-  <div class="text-2xl font-bold">Hello all!</div>
+  <div x-data="{count:0}">
+    <button x-on:click="count++">Increment</button>
+    <p x-text="count"></p>
+  </div>
 </Layout>
