--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,6 @@ const EXPEDITIONS = [
 ];
 
 const SCORES = [
-  { score: 1, emoji: "1️⃣" },
   { score: 2, emoji: "2️⃣" },
   { score: 3, emoji: "3️⃣" },
   { score: 4, emoji: "4️⃣" },
@@ -151,7 +150,7 @@ const SCORES = [
 
         <tfoot>
           <tr>
-            <th class="text-xl">🧮</th>
+            <th class="text-xl rotate-90">🧮</th>
 
             {
               EXPEDITIONS.map(({ name }) => (
