--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,31 +4,31 @@ import Layout from "../layouts/Layout.astro";
 const EXPEDITIONS = [
   {
     name: "blue",
-    background: "bg-blue-500",
+    background: { checked: "aria-checked:bg-blue-500" },
     text: "text-blue-500",
     border: "border-blue-500",
   },
   {
     name: "yellow",
-    background: "bg-yellow-500",
+    background: { checked: "aria-checked:bg-yellow-500" },
     text: "text-yellow-500",
     border: "border-yellow-500",
   },
   {
     name: "gray",
-    background: "bg-gray-200",
+    background: { checked: "aria-checked:bg-gray-200" },
     text: "text-gray-200",
     border: "border-gray-200",
   },
   {
     name: "green",
-    background: "bg-green-500",
+    background: { checked: "aria-checked:bg-green-500" },
     text: "text-green-500",
     border: "border-green-500",
   },
   {
     name: "red",
-    background: "bg-red-500",
+    background: { checked: "aria-checked:bg-red-500" },
     text: "text-red-500",
     border: "border-red-500",
   },
@@ -53,6 +53,10 @@ const SCORES = [
   import Alpine from "alpinejs";
 
   Alpine.data("expedition", () => ({
+    get size() {
+      return this.wagers.size + this.scores.size;
+    },
+
     wagers: new Set<number>(),
     toggleWager(wager: number) {
       // uncheck higher wagers
@@ -91,9 +95,7 @@ const SCORES = [
     },
 
     get totalScore() {
-      const totalCards = this.scores.size + this.wagers.size;
-
-      if (totalCards === 0) {
+      if (this.size === 0) {
         return 0;
       }
 
@@ -103,7 +105,7 @@ const SCORES = [
       );
 
       const expeditionCost = 20;
-      const bigExpeditionBonus = totalCards >= 8 ? 20 : 0;
+      const bigExpeditionBonus = this.size >= 8 ? 20 : 0;
       const multiplier = this.wagers.size + 1;
 
       return (scores - expeditionCost) * multiplier + bigExpeditionBonus;
@@ -126,9 +128,9 @@ const SCORES = [
           <th></th>
 
           {
-            EXPEDITIONS.map(({ background: bg }) => (
+            EXPEDITIONS.map(() => (
               <th>
-                <div class:list={["m-auto size-6 rounded-full", bg]} />
+                <div class:list={["m-auto size-6 rounded-full bg-red-500"]} />
               </th>
             ))
           }
@@ -145,9 +147,14 @@ const SCORES = [
                 <td>
                   <button
                     name={`${name}-wager-${wager}`}
+                    role="checkbox"
+                    x-bind:aria-checked={`${name}.wagers.has(${wager})`}
                     x-on:click={`${name}.toggleWager(${wager})`}
-                    x-bind:class={`${name}.wagers.has(${wager}) && '${background}'`}
-                    class={`btn btn-square btn-xs ${border}`}
+                    class:list={[
+                      "btn btn-square btn-xs",
+                      border,
+                      background.checked,
+                    ]}
                   >
                     🤝
                   </button>
