--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,7 @@
 @import "tailwindcss";
 @plugin "daisyui";
+
+/* https://alpinejs.dev/directives/cloak */
+[x-cloak] {
+  display: none !important;
+}
