Render countdown for total

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,20 @@
 [x-cloak] {
   display: none !important;
 }
+
+.countdown.countdown-digit {
+  & > * {
+    &:before {
+      content: "0\A 1\A 2\A 3\A 4\A 5\A 6\A 7\A 8\A 9\A";
+    }
+  }
+}
+
+.countdown.countdown-sign {
+  & > * {
+    &:before {
+      content: "-\A \A +\A";
+      top: calc((var(--value) + 1) * -1em);
+    }
+  }
+}
