--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -143,7 +143,15 @@ const SCORES = [2, 3, 4, 5, 6, 7, 8, 9, 10];
 
       get total() {
         return ${EXPEDITIONS.map(({ name }) => `this.${name}.totalScore`).join(" + ")};
-      }
+      },
+
+      get totalDigits() {
+        return Math.abs(this.total).toString().padStart(3, '0').split('');
+      },
+
+      get totalSign() {
+        return this.total < 0 ? '-' : '+';
+      },
     }`}
   >
     <table class="table table-sm text-center">
@@ -197,17 +205,23 @@ const SCORES = [2, 3, 4, 5, 6, 7, 8, 9, 10];
           ))
         }
 
-        <tfoot class="border-t-4">
+        <tfoot class="border-t-4 font-mono">
           <tr>
             {
-              EXPEDITIONS.map(({ name }) => (
-                <td>
+              EXPEDITIONS.map(({ name }, index, arr) => (
+                <td class="relative">
                   <span
                     class="tooltip select-none underline-offset-4 decoration-dotted"
                     x-bind:data-tip={`${name}.totalScoreHint`}
                     x-text={`${name}.totalScore`}
                     x-bind:class={`${name}.totalScore === 0 ? 'cursor-default' : 'cursor-help underline'`}
                   />
+
+                  {index > 0 && (
+                    <span class="absolute right-full inset-y-0 flex items-center">
+                      +
+                    </span>
+                  )}
                 </td>
               ))
             }
@@ -216,9 +230,31 @@ const SCORES = [2, 3, 4, 5, 6, 7, 8, 9, 10];
       </tbody>
     </table>
 
-    <div class="stat">
-      <div class="stat-title">Total</div>
-      <div class="stat-value" x-text="total"></div>
+    <div class="mt-2 flex justify-center font-mono text-6xl">
+      <span class="countdown countdown-sign">
+        <span
+          x-bind:style="'--value:' + Math.sign(total) + ';'"
+          aria-live="polite"
+          x-text="totalSign"
+          x-bind:aria-label="totalSign"
+        >
+        </span>
+      </span>
+
+      <template x-for="digit of totalDigits">
+        <span class="countdown countdown-digit">
+          <span
+            x-bind:style="'--value:' + digit + ';'"
+            aria-live="polite"
+            x-text="digit"
+            x-bind:aria-label="digit"
+          >
+          </span>
+        </span>
+      </template>
+
+      <!-- balance the digits in middle -->
+      <span>&nbsp;</span>
     </div>
   </div>
 </Layout>
