--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -205,7 +205,7 @@ const SCORES = [2, 3, 4, 5, 6, 7, 8, 9, 10];
           ))
         }
 
-        <tfoot class="border-t-4 font-mono">
+        <tfoot class="border-t-4">
           <tr>
             {
               EXPEDITIONS.map(({ name }, index, arr) => (
