--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,33 +4,23 @@ import Root from "../layouts/root.astro";
 const EXPEDITIONS = [
   {
     name: "blue",
-    background: { checked: "aria-checked:bg-blue-400" },
-    text: "text-blue-400",
-    border: "border-blue-400",
+    btn: "btn-secondary",
   },
   {
     name: "yellow",
-    background: { checked: "aria-checked:bg-yellow-400" },
-    text: "text-yellow-400",
-    border: "border-yellow-400",
+    btn: "btn-warning",
   },
   {
     name: "gray",
-    background: { checked: "aria-checked:bg-gray-200" },
-    text: "text-gray-200",
-    border: "border-gray-200",
+    btn: "btn-neutral",
   },
   {
     name: "green",
-    background: { checked: "aria-checked:bg-green-400" },
-    text: "text-green-400",
-    border: "border-green-400",
+    btn: "btn-success",
   },
   {
     name: "red",
-    background: { checked: "aria-checked:bg-red-400" },
-    text: "text-red-400",
-    border: "border-red-400",
+    btn: "btn-error",
   },
 ];
 
@@ -155,7 +145,7 @@ const SCORES = [2, 3, 4, 5, 6, 7, 8, 9, 10];
         {
           WAGERS.map((wager) => (
             <tr>
-              {EXPEDITIONS.map(({ name, background, border }) => (
+              {EXPEDITIONS.map(({ name, btn }) => (
                 <td>
                   <button
                     name={`${name}-wager-${wager}`}
@@ -163,9 +153,8 @@ const SCORES = [2, 3, 4, 5, 6, 7, 8, 9, 10];
                     x-bind:aria-checked={`${name}.wagers.has(${wager})`}
                     x-on:click={`${name}.toggleWager(${wager})`}
                     class:list={[
-                      "btn btn-square btn-xs",
-                      border,
-                      background.checked,
+                      "btn btn-square btn-xs not-aria-checked:btn-outline",
+                      btn,
                     ]}
                   >
                     🤝
@@ -179,7 +168,7 @@ const SCORES = [2, 3, 4, 5, 6, 7, 8, 9, 10];
         {
           SCORES.map((score) => (
             <tr>
-              {EXPEDITIONS.map(({ name, text, border, background }) => (
+              {EXPEDITIONS.map(({ name, btn }) => (
                 <td>
                   <button
                     name={`${name}-score-${score}`}
@@ -187,10 +176,8 @@ const SCORES = [2, 3, 4, 5, 6, 7, 8, 9, 10];
                     x-bind:aria-checked={`${name}.scores.has(${score})`}
                     x-on:click={`(${name}.toggleScore(${score}))`}
                     class:list={[
-                      "btn btn-square btn-xs aria-checked:text-base-100",
-                      text,
-                      border,
-                      background.checked,
+                      "btn btn-square btn-xs not-aria-checked:btn-outline",
+                      btn,
                     ]}
                   >
                     {score}
@@ -213,9 +200,8 @@ const SCORES = [2, 3, 4, 5, 6, 7, 8, 9, 10];
                     <span
                       class:list={[
                         "tooltip-content",
-                        index < 3 && "!left-0 !right-auto !transform-none",
-                        index > arr.length - 3 &&
-                          "!right-0 !left-auto !transform-none",
+                        index < 2 && "!left-0 !right-auto !transform-none",
+                        index > 2 && "!right-0 !left-auto !transform-none",
                       ]}
                       x-text={`${name}.totalScoreHint`}
                     />
