--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,27 @@
   themes: light --default, dark --prefersdark;
 }
 
+@plugin "daisyui/theme" {
+  name: "light";
+
+  --color-secondary: var(--color-blue-400);
+  --color-neutral: var(--color-gray-400);
+  --color-success: var(--color-green-400);
+  --color-warning: var(--color-yellow-400);
+  --color-error: var(--color-red-400);
+}
+
+@plugin "daisyui/theme" {
+  name: "dark";
+
+  --color-secondary: var(--color-blue-400);
+  --color-neutral: var(--color-gray-300);
+  --color-neutral-content: var(--color-base-100);
+  --color-success: var(--color-green-400);
+  --color-warning: var(--color-yellow-400);
+  --color-error: var(--color-red-400);
+}
+
 /* https://alpinejs.dev/directives/cloak */
 [x-cloak] {
   display: none !important;
