--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -246,10 +246,8 @@ const SCORES = [2, 3, 4, 5, 6, 7, 8, 9, 10];
       class="mt-2 flex flex-row px-3 gap-8 justify-around items-center content-center"
     >
       <button
-        role="checkbox"
         type="button"
-        class="btn btn-primary btn-circle not-aria-checked:btn-outline"
-        x-bind:aria-checked="mirror"
+        class="btn btn-primary btn-circle btn-outline"
         x-on:click="mirror = !mirror"
       >
         <svg
