--- a/src/styles.css
+++ b/src/styles.css
@@ -59,3 +59,7 @@
 .btn.btn-outline {
   @apply focus-visible:bg-transparent;
 }
+
+.countdown > :before {
+  @apply transition-[top] duration-300 ease-out transform-cpu;
+}
